# public-meilisearch-discord

./: Cargo.toml  search.sh  setup.sh  tech-summarize.prompt.txt
src/: main.rs
