[package]
name = "public-meilisearch-discord"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-openai = "0.17.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serenity = "0.12.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.0", features = ["serde"] }
