[package]
name = "public-meilisearch-discord"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-openai = "0.17.1"
indicatif = { version = "0.17.7", features = ["futures"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serenity = { version = "0.12.0", path = "../serenity" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.0", features = ["serde"] }
